[package]
name = "cargo-what"
version = "0.1.0"
edition = "2021"
description = "list the workspace members"
license-file = "LICENSE"
documentation = ""
repository = "https://github.com/amanjeev/cargo-what"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
cargo_metadata = { version = "0" }
console = "0.15.5"
